--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,7 +24,7 @@ author1:
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
     # twitter:         
-    github:           TODO
+    github:           steveguile
     # download:        https://github.com/qwtel/hydejack-starter-kit/archive/master.zip
     email:            TODO # mailto:<pabloariasal@gmail.com>
     # rss:             https://<url>/feed.xml
